[Tech] Convert classes introduced in v.0.11.0 to Java11 syntax